syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Student {
	rpc GetStudentInfo (StudentLookupModel) returns (StudentModel);
	rpc GetNewStudents (NewStudentsRequest) returns (stream StudentModel);
}


message StudentLookupModel {
	int32 studentId = 1;
}


message StudentModel {
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	bool isRegistered = 4;
	int32 age = 5;
}


message NewStudentsRequest{

}